# cryptographyTasks

./: .gitignore  README.md
T1/: main.cpp
T10/: CMakeLists.txt  main.c
T2/: main.cpp
T3/: main.cpp
T4/: main.cpp
T5/: T5.cpp  T5.sln  T5.vcxproj
T6/: CMakeLists.txt  main.c
T7/: CMakeLists.txt  main.c
T8/: .gitignore  CMakeLists.txt  main.cpp
